# img2svg

./: ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md  generate_test_images.py
examples/: README.md  compare.html  comparison.html  convert_all.sh
src/: bezier_fitter.rs  cli.rs  edge_detector.rs  enhanced_quantizer.rs  enhanced_vectorizer.rs  image_processor.rs  image_processor_tests.rs  lib.rs  main.rs  mcp.rs  path_simplifier.rs  preprocessor.rs  region_extractor.rs  svg_generator.rs  svg_generator_tests.rs  vectorizer.rs  vectorizer_tests.rs
tests/: integration_tests.rs
